sumo/tests/duarouter/flows/errors/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departPos' in definition of flow '0' is empty.
Error: Invalid departPos definition for flow '0';
 must be one of ("random", "random_free", "free", "base", "pwagSimple", "pwagGeneric", "maxSpeedGap", or a float)
Quitting (on error).
